# irpam_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/capture/: CMakeLists.txt  camera.cpp  cameramanager.cpp  image.cpp  videodevice.cpp
src/capture/include/: camera.hpp  cameramanager.hpp  image.hpp  stb_image_write.hpp  videodevice.hpp
src/cmd/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  irpam.cpp
src/lib/include/: irpam.hpp
src/recognition/: CMakeLists.txt  recognition.cpp
src/recognition/include/: recognition.hpp
src/recognition/models/: README.md
tests/: CMakeLists.txt  camera.cpp  test_camera.cpp  test_recognition.cpp
